--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@responsive {
+    .text-shadow {
+      text-shadow: 0 2px 4px rgba(0,0,0,0.50);
+    }
+
+    .text-shadow-md {
+      text-shadow: 0 4px 8px rgba(0,0,0,0.50), 0 2px 4px rgba(0,0,0,0.30);
+    }
+
+    .text-shadow-lg {
+      text-shadow: 0 15px 30px rgba(0,0,0,0.50), 0 5px 15px rgba(0,0,0,0.30);
+    }
+
+    .text-shadow-none {
+      text-shadow: none;
+    }
+}
